devops/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cerberus
  labels:
    app: cerberus-ai
