devops/kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cerberus-frontend
  namespace: cerberus
spec:
  selector:
    app: cerberus-frontend
  ports:
    - port: 80
      targetPort: 80
