devops/kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: cerberus
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
    - port: 443
      targetPort: 443
