devops/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cerberus-ingress
  namespace: cerberus
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: cerberus-ai.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cerberus-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cerberus-frontend
                port:
                  number: 80
